# python_native_boilerplate

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  setup.py
src/: cli.py
src/native/: example.c
src/native/bindings/: example.i
